# GTI-3B-SBOCK

./: .gitignore  README.md  my_map.yaml
sbock_web_ws/: db.conexion.js  index.js  login.html  package-lock.json  package.json
sbock_web_ws/app/: dashboard.html
sbock_web_ws/app/js/: robot.js
sbock_web_ws/controllers/: productos.controller.js  usuarios.controller.js
sbock_web_ws/css/: estilos.css
sbock_web_ws/models/: Producto.js  Usuario.js
sbock_web_ws/public/: index.html  login.html
sbock_web_ws/public/app/: dashboard.html  puntos.txt
sbock_web_ws/public/app/css/: estilos.css
sbock_web_ws/public/app/js/: datos-stock.js  efecto-robot.js  robot.js  ros2dmap.js
sbock_web_ws/public/js/: login.js
sbock_web_ws/routes/: productos.routes.js  usuarios.routes.js
turtlebot3_ws/foxy/src/sbock/sbock/: CMakeLists.txt  package.xml
turtlebot3_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
turtlebot3_ws/log/: latest_build
turtlebot3_ws/sbock_web/: index.html
turtlebot3_ws/sbock_web/app/: dashboard.html
turtlebot3_ws/src/: fitxerBuit
turtlebot3_ws/src/my_first_node/: package.xml  setup.py
turtlebot3_ws/src/my_first_node/my_first_node/: simple_node.py
turtlebot3_ws/src/my_first_publisher/: package.xml  setup.py
turtlebot3_ws/src/my_world/world/: burger.model
turtlebot3_ws/src/provide_map/: package.xml
turtlebot3_ws/src/sbock/my_world/: CMakeLists.txt  README.md  package.xml
turtlebot3_ws/src/sbock_nav2_system/: setup.cfg  setup.py
turtlebot3_ws/src/turtlebot3_simulations/: hola
(+515 files in other folders)
