<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sbock</name>
    <version>0.0.0</version>
    <description>ROS 2 packages for Sbock Project</description>
    <maintainer email="sbock@gmail.com">Sbock</maintainer>
    <license>Apache 2.0</license>

    <url type="website">http://XXXXXXX</url>
    <url type="repository">https://github.com/AusiasBM/GTI-3B-SBOCK</url>
    <url type="bugtracker">https://github.com/XXXXXX</url>


    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>sbock_robot_position_subscriber</exec_depend>
    <exec_depend>sbock_provide_map</exec_depend>
    <exec_depend>sbock_my_world</exec_depend>
    <exec_depend>sbock_nav_position</exec_depend>
    <exec_depend>sbock_position_publisher</exec_depend>
    <exec_depend>sbock_custom_interface</exec_depend>
    <exec_depend>sbock_service_navigation</exec_depend>
    <exec_depend>sbock_service_predict_yolo</exec_depend>
    <exec_depend>sbock_service_remote_control</exec_depend>
    <exec_depend>sbock_show_msg</exec_depend>
    <exec_depend>sbock_capture_image</exec_depend>

    <export>
    <build_type>ament_cmake</build_type>
    </export>
</package>
